Updating code to match the newest method for simplifying communication and the compilation changes needed to complete the refactoring.